# openapi.yaml
@@ -20,6 +20,10 @@ paths:
                   in: query
                   schema:
                     type: string
+                - name: marketPlaceAddr
+                  in: query
+                  schema:
+                    type: string
             responses:
                 "200":
                     description: OK
